[package]
name = "stainless-facts"
version = "0.1.0"
edition = "2024"
authors = ["Joakim Ohlrogge"]
license = "MIT OR Apache-2.0"
description = "A simple, immutable fact stream library inspired by Datomic"
repository = "https://github.com/johlrogge/stainless-facts"  
readme = "README.md"
keywords = ["facts", "event-sourcing", "datomic", "immutable", "schema-evolution"]
categories = ["data-structures", "database"]

[features]
default = []
tokio = ["dep:tokio"]
io = []  # Enable IO functionality (both sync and async)

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
thiserror = "1.0"

# IO dependencies (only when io feature enabled)
fs2 = { version = "0.4"}

# Async dependencies (only when tokio feature enabled)
tokio = { version = "1", features = ["fs", "io-util", "time"], optional = true }

[dev-dependencies]
rstest = "0.26"
tempfile = "3.8"
tokio = { version = "1", features = ["macros", "rt"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
